Opened 15 years ago

Closed 15 years ago

#758 closed defect (fixed)

zzufed .264 file crashes ffmpeg_g

Reported by: Diana Muscalu Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: h264
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

(gdb) bt
#0 0x00007ffff761641a in _int_malloc (av=0x7ffff79361c0, bytes=4000)

at malloc.c:4636

#1 0x00007ffff7617121 in _int_memalign (av=0x7ffff79361c0, alignment=32,

bytes=<optimized out>) at malloc.c:5492

#2 0x00007ffff7619213 in GI_libc_memalign (alignment=32, bytes=3920)

at malloc.c:3880

#3 0x00007ffff761a429 in posix_memalign (memptr=0x7fffffffd6b0,

alignment=<optimized out>, size=<optimized out>) at malloc.c:6315

#4 0x0000000000a3e6d0 in av_malloc (size=<optimized out>)

at libavutil/mem.c:90

#5 0x000000000052ae65 in av_dup_packet (pkt=0x13a6d00)

at libavcodec/avpacket.c:130

#6 0x00000000004fb4e3 in avformat_find_stream_info (ic=0x139e7a0,

options=0x13a52e0) at libavformat/utils.c:2476

#7 0x000000000043f95c in opt_input_file (o=0x7fffffffdd90,

opt=<optimized out>, filename=<optimized out>) at ffmpeg.c:3427

#8 0x0000000000443591 in parse_option (optctx=0x7fffffffdd90,

opt=0x7fffffffe455 "i",
arg=0x7fffffffe457 "/home/vlad/Desktop/ffmpeg_bug/fisier",
options=0xa4a840) at cmdutils.c:292

#9 0x00000000004437e7 in parse_options (optctx=0x7fffffffdd90, argc=8,

argv=0x7fffffffe148, options=0xa4a840,
parse_arg_function=0x440e50 <opt_output_file>) at cmdutils.c:325

---Type <return> to continue, or q <return> to quit---
#10 0x0000000000435b4d in main (argc=8, argv=0x7fffffffe148) at ffmpeg.c:4839
(gdb)

Attachments (4)

fisier (404.5 KB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )
bt.txt (1.4 KB ) - added by Diana Muscalu 15 years ago.
bt report
gdb.txt (39.2 KB ) - added by Diana Muscalu 15 years ago.
gdb report
valgrind.txt (195.6 KB ) - added by Diana Muscalu 15 years ago.
valgrind report

Download all attachments as: .zip

Change History (5)

by Diana Muscalu, 15 years ago

Attachment: fisier added

use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

by Diana Muscalu, 15 years ago

Attachment: bt.txt added

bt report

by Diana Muscalu, 15 years ago

Attachment: gdb.txt added

gdb report

by Diana Muscalu, 15 years ago

Attachment: valgrind.txt added

valgrind report

comment:1 by Michael Niedermayer, 15 years ago

Component: avformatavcodec
Keywords: h264 added
Reproduced by developer: set
Resolution: fixed
Status: newclosed

Fixed

Note: See TracTickets for help on using tickets.